--- a/src/css/Timer.css
+++ b/src/css/Timer.css
@@ -18,11 +18,11 @@
 }
 .countdown-clock{
     display: flex;
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    padding: 10px;
+
 }
 .countdown-value-container{
     font-family: 'Montserrat', 'sans-serif';
